# surroundgen

./: .gitignore  LICENSE  README.md  dsf2flac.py  dts2flac.py  flac2wav.py  mka2flac.py  mkv2flac.py  mkv2mlp.py  setup.cfg  surroundgen.py  surroundsep.py
cli/dsf2flac/: __init__.py
cli/dts2flac/: __init__.py
cli/flac2wav/: __init__.py
cli/mkv2flac/: __init__.py
cli/mkv2mlp/: __init__.py
cli/mkv2wav/: __init__.py
cli/surroundgen/: __init__.py
cli/surroundsep/: __init__.py
iso2dsd/: README.sh
iso2dsd/sacd_extract/: batch_convert.sh  changelog.txt  readme.txt  sacd_extract  sacd_extract.cfg
