[metadata]
name = surroundgen
version = 0.0.1
author = Axel Delafosse
author_email = axeldelafosse@gmail.com
description = Surroundgen is a surround and immersive spatial audio toolkit. It helps you separate and generate multichannel audio files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://surroundgen.dev
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9

[options.package_data]
* = *.json

[options.entry_points]
console_scripts =
    surroundgen = cli.surroundgen:main
    surroundsep = cli.surroundsep:main
    mkv2flac = cli.mkv2flac:main
    dsf2flac = cli.dsf2flac:main
    dts2flac = cli.dts2flac:main
    flac2wav = cli.flac2wav:main
    mkv2wav = cli.mkv2wav:main
    mkv2mlp = cli.mkv2mlp:main

